<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tourfit Application</string>
    <string name="action_settings">Settings</string>
    <string name="showMyLocBtn">My GPS Coordinates</string>

    <string-array name="places">
        <item>ATM</item>
        <item>Bank</item>
        <item>Cafe</item>
        <item>Fire-Station</item>
        <item>Hospital</item>
        <item>Pharmacy</item>
        <item>Police</item>
        <item>Restaurant</item>
        <item>Shopping Mall</item>
    </string-array>

    <string name="select_pois">Select Point of Interest</string>
    <string name="pois">Display POIS</string>
    <string name="poi0">Melbourne Zoo</string>
    <string name="poi1">Rialto Tower</string>
    <string name="poi2">Fitzroy Gardens</string>
    <string name="poi3">Royal Exhibition Building and Carlton Gardens</string>
    <string name="poi4">Telstra Dome</string>
    <string name="poi5">Crown Casino Melbourne</string>
    <string name="displayapi">Button</string>
    <string name="show_selected_poi">Show in map</string>
    <string name="search_type">Type of place</string>
    <string name="search_radius">Distance within in m</string>
    <!-- Application identifiers -->
    <string name="searchPlaces">Search Places</string>
    <string name="title_activity_display_message">My Second Activity</string>
    <string name="app_tag">LocationUpdates</string>
    <string name="app_description">        Displays current address and current or updated location using Location Services</string>

    <!-- User interface labels and strings -->


    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">        Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">        Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="title_activity_poi_selection">Select your point of interest</string>
    <string name="title_activity_show_poi">Search Results</string>

    <color name="black">#000000</color>
    <color name="black">#cccccc</color>
    <color name="white">#ffffff</color>

    <string name="search_hint">Search Cafe/Hospital/Atm etc</string>
    <string name="app_name">TourFit</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Tap two locations in the map</string>
    <string name="origin">origin latitude longitude</string>
    <string name="destination">Destination latitude longitude</string>
    <string name="caloriesconsumed">calories required to travel</string>
    <string name="str_tv_distance_time">Distance</string>
    <string name="title_activity_launcher">Tourfit Application</string>
    <string name="title_activity_show_list">ShowList</string>
	<string name="indoor_display">Indoor Selection</string>
    <string name="indoor">Go to Bg114</string>
    <string name="bg115">Go to BG115</string>
    <string name="bg116">Go to BG116</string>
    <string name="img1"></string>
    <string name="title_activity_show_list">All images</string>
    <string name="title_activity_show_img">First Image</string>
    <string name="title_activity_show_img2">Second Image</string>
    <string name="title_activity_show_img3">Third Image</string>
    <string name="indoor_position">Indoor Positioning</string>
    <string name="title_activity_indoor_position">Indoor Positioning</string>
    <string name="track_user">Track the User</string>
    <string name="app_name">TourFit</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Tap two locations in the map</string>
    <string name="origin">origin latitude longitude</string>
    <string name="destination">Destination latitude longitude</string>
    <string name="caloriesconsumed">calories required to travel</string>
    <string name="str_tv_distance_time">Distance</string>
    <string name="title_activity_tracker_user">Tracking location of user</string>
    
</resources>
