<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyMainActivity" 
    android:orientation ="vertical" >

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_pois"
        android:onClick="selectPois"/>
    
    
    <View
   		android:layout_width="fill_parent"
   		android:layout_marginTop="10dp"
    	android:layout_height="2dp"
    	android:background="@android:color/darker_gray"/>
    
    <TextView
        android:id="@+id/tv_distance_time"
        style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"
        android:text="@string/search_hint"  />
   
    <View
    	android:layout_width="fill_parent"
    	android:layout_height="2dp"
    	android:layout_marginBottom="10dp"
    	android:background="@android:color/darker_gray"/>
    
    <EditText android:id="@+id/search_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_type" />
    
    <EditText android:id="@+id/search_radius"
       	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_radius" 
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchPlaces" 
        android:onClick="searchPlaces"/>
	
	<Button 
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/indoor_position" 
	    android:onClick="indoorPosition" />
	<Button 
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/track_user" 
	    android:onClick="trackUser" />
</LinearLayout>
